# rainbow-tsv-tree-sitter

./: Cargo.toml  demo.tsv  grammar.js  package.json  sample_tsv_file.tsv
src/: grammar.json  node-types.json  parser.c
