[package]
name = "tree-sitter-rainbow-tsv"
description = "for zed rainbow tsv"
version = "0.0.1"
keywords = ["incremental", "parsing", "rainbow tsv"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/weartist/rainbow-tsv-tree-sitter"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
